OpenId-Debug-Seite engelegt

--- a/openid.info.yml
+++ b/openid.info.yml
@@ -1,6 +1,6 @@
 name: 'OpenId'
 description: 'Allows to assign openids to users. The users can then login using that open ids'
-package: Auth
+package: aa_Auth
 type: module
 core: 8.x
 
